# therapyAI

./: .gitignore
backend/: README.md  __init__.py  dependencies.py  models.py  pyproject.toml  server.py
backend/routers/: __init__.py  inference.py  journal.py
client/therapyAI/: .env.example  index.html  package.json  pnpm-lock.yaml
client/therapyAI/src/: App.jsx  main.jsx  router.jsx
client/therapyAI/src/componenets/: Signup.jsx
client/therapyAI/src/css/: signup.css
